# flying-the-radar

./: .env.example  .gitignore  README.md  pyproject.toml
codex-prompts/: 01-repo-scaffold.txt  02-pdf-extraction.txt  04-insight-schema.txt  06-finance-specific-prompt-design.txt  07-cli-output.txt
docs/: australian-connectors.md  daily-brief-operations.md  daily-brief-rendering.md  daily-brief-schema.md  daily-brief-synthesis.md  deployment.md  global-connectors.md  ingestion-framework.md  market-intelligence-architecture.md  private-digest.md  private-ingestion.md  private-release-checklist.md  private-research-architecture.md  private-research-library.md  private-research-policy.md  private-research-schema.md  private-research-storage.md  private-research-summarizer.md  private-research-ui.md  private-undertheradar-connector.md  source-policy.md  source-registry.md
examples/: daily_brief_config.toml  daily_market_brief.json  daily_market_items.jsonl  market_insight_report.json  private_research_document.json  summarize_pdf.py
tests/: __init__.py  conftest.py  pdf_fixtures.py  test_australian_connectors.py  test_chunker.py  test_cli.py  test_daily_brief_config.py  test_daily_brief_mvp_path.py  test_daily_brief_rendering.py  test_daily_brief_schema.py  test_daily_brief_synthesis.py  test_global_connectors.py  test_ingestion.py  test_insight_schema.py  test_llm_client.py  test_pdf_loader.py  test_private_digest.py  test_private_ingestion.py  test_private_release_safety.py  test_private_research_library.py  test_private_research_policy.py  test_private_settings.py  (+9 more)
(+70 files in other folders)
